KubeConfigFiles/service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
  labels:
    app: example-app
spec:
  selector:
    app: example-app
  ports:
  - protocol: TCP
    port: 80 # Service listens here
    targetPort: 8000
  type: ClusterIP
