KubeConfigFiles/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    # this will remove the prefix for example: /second-app/one it will be /one
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
  - host: example-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-app-service
            port:
              number: 80
      - path: /second-app
        pathType: Prefix
        backend:
          service:
            name: second-app-service
            port:
              number: 80
  ingressClassName: nginx
